Fix social media alignment for desktop layout

--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -90,6 +90,7 @@ a {
       display: block;
       margin-right: 5%;
       .social-media-container {
+        text-align: right;
       }
       p.copyright {
         text-align: right;
